@@ -248,6 +248,22 @@ literal|"Fields can not be multiValued: *_c"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testCurrencyOERNoRates
+specifier|public
+name|void
+name|testCurrencyOERNoRates
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|doTest
+argument_list|(
+literal|"bad-schema-currency-ft-oer-norates.xml"
+argument_list|,
+literal|"ratesFileLocation"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testPerFieldtypeSimButNoSchemaSimFactory
 specifier|public
 name|void
