@@ -132,7 +132,7 @@ DECL|field|loader
 name|ResourceLoader
 name|loader
 decl_stmt|;
-DECL|field|emptyParams
+DECL|field|mockParams
 specifier|private
 specifier|final
 name|Map
@@ -141,7 +141,7 @@ name|String
 argument_list|,
 name|String
 argument_list|>
-name|emptyParams
+name|mockParams
 init|=
 operator|new
 name|HashMap
@@ -151,16 +151,6 @@ argument_list|,
 name|String
 argument_list|>
 argument_list|()
-decl_stmt|;
-DECL|field|mockParams
-specifier|private
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|mockParams
 decl_stmt|;
 annotation|@
 name|Override
@@ -194,18 +184,6 @@ operator|.
 name|setUp
 argument_list|()
 expr_stmt|;
-name|mockParams
-operator|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-argument_list|()
-expr_stmt|;
-empty_stmt|;
 name|mockParams
 operator|.
 name|put
@@ -246,35 +224,29 @@ name|oerp
 operator|.
 name|init
 argument_list|(
-name|emptyParams
+name|mockParams
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-literal|"Wrong default url"
+literal|"Wrong url"
+argument_list|,
+literal|"open-exchange-rates.json"
 argument_list|,
 name|oerp
 operator|.
 name|ratesFileLocation
-operator|.
-name|toString
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|"http://openexchangerates.org/latest.json"
-argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 literal|"Wrong default interval"
+argument_list|,
+literal|1440
 argument_list|,
 name|oerp
 operator|.
 name|refreshInterval
-operator|==
-literal|1440
 argument_list|)
 expr_stmt|;
 name|Map
@@ -323,29 +295,26 @@ argument_list|(
 name|params
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 literal|"Wrong param set url"
+argument_list|,
+literal|"http://foo.bar/baz"
 argument_list|,
 name|oerp
 operator|.
 name|ratesFileLocation
-operator|.
-name|equals
-argument_list|(
-literal|"http://foo.bar/baz"
-argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
 literal|"Wrong param interval"
+argument_list|,
+literal|100
 argument_list|,
 name|oerp
 operator|.
 name|refreshInterval
-operator|==
-literal|100
 argument_list|)
 expr_stmt|;
 block|}
